Changes with Android PDF viewer v0.9.01.02

  *) using relative path of thumbnail in opf file bda9c4f3feb0ac7552c10af929cd710e7101d3c6
  *) Solve pdf href should using relative path against opf file 6cebafd25bd6a311acd3fe3ae80773256db97be5


Changes with Android PDF viewer v0.9.01.01

  *) First version
  *) Add viewer version on right bottom
  *) Add loading icon while each page loading
  *) Remove unnecessary css files