@@ -64,6 +64,6 @@
         <label id="thumbnailbar" class="thumbnailbtn">
         </label>
     </footer>
-  <div id="dev_version">v0.9.01.02</div>
+  <div id="dev_version">v0.9.01.03</div>
 </body>
 </html>
